force-app/main/default/objects/Bank_Appointment__c/Bank_Appointment__c.object-meta.xml
<CustomObject>
    <label>Bank Appointment</label>
    <nameField>
        <label>Bank Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Appointment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>