force-app/main/default/objects/Bank_Appointment__c/fields/Bank_Area__c.field-meta.xml
<CustomField>
    <fullName>Bank_Area__c</fullName>
    <label>Bank Area</label>
    <length>30</length>
    <type>Text</type>
</CustomField>