force-app/main/default/objects/Bank_Appointment__c/fields/Bank_Location__c.field-meta.xml
<CustomField>
    <fullName>Bank_Location__c</fullName>
    <label>Bank Location</label>
    <length>40</length>
    <type>Text</type>
</CustomField>