force-app/main/default/objects/Bank_Appointment__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <description>to store bank name</description>
    <label>Bank Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>