force-app/main/default/objects/Bank_Appointment__c/fields/Slot_Status__c.field-meta.xml
<CustomField>
    <fullName>Slot_Status__c</fullName>
    <label>Slot Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Not Booked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>